Fixed width alignments on image and gallery

--- a/assets/stylesheets/plugins/_gutenberg.scss
+++ b/assets/stylesheets/plugins/_gutenberg.scss
@@ -184,6 +184,7 @@ p {
 
     &.alignwide {
         max-width: $content__width-large;
+        width: 100%;
     }
 
     &.alignfull {
@@ -207,7 +208,8 @@ p {
     margin-top: 3em;
 
     &.alignwide {
-        @include site-width($content__width-large);
+        max-width: $content__width-large;
+        width: 100%;
     }
 
     &.alignfull {
@@ -215,9 +217,8 @@ p {
         width: 100%;
     }
 
-    &.columns-2 {
-        // TODO iterate over possible column widths
-        // TODO small screens should collapse to single column
+    .blocks-gallery-image {
+      margin: 8px;
     }
 }
 
